--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -76,6 +76,14 @@
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>jheaps</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
