--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -30,19 +30,25 @@
 
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
-            <artifactId>lucene-core</artifactId>
+            <artifactId>lucene-uber</artifactId>
             <scope>compile</scope>
         </dependency>
 
-        <dependency>
-            <groupId>${tinkar-jpms-deps.groupId}</groupId>
-            <artifactId>lucene-queryparser</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+<!--            <groupId>${tinkar-jpms-deps.groupId}</groupId>-->
+<!--            <artifactId>lucene-core</artifactId>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
 
-        <dependency>
-            <groupId>${tinkar-jpms-deps.groupId}</groupId>
-            <artifactId>lucene-highlighter</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>${tinkar-jpms-deps.groupId}</groupId>-->
+<!--            <artifactId>lucene-queryparser</artifactId>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>${tinkar-jpms-deps.groupId}</groupId>-->
+<!--            <artifactId>lucene-highlighter</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
