--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,11 @@
         <caffeine.version>3.1.1-r2</caffeine.version>
         <eclipse-collections.version>11.1.0-r2</eclipse-collections.version>
         <eclipse-collections-api.version>11.1.0-r3</eclipse-collections-api.version>
+        <jackson.version>2.14.2</jackson.version>
         <jetty-slf4j-impl.version>11.0.7</jetty-slf4j-impl.version>
         <jgrapht.version>1.5.0</jgrapht.version>
         <junit.version>5.6.3</junit.version>
+        <mockito.version>5.2.0</mockito.version>
         <mvstore.version>1.4.200-r2</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <jheaps.version>0.14-r2</jheaps.version>
