--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,10 @@
         <mvstore.version>1.4.200-r3</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <jheaps.version>0.14-r3</jheaps.version>
-        <lucene.version>8.9.0</lucene.version>
-        <lucene-uber.version>8.9.0-r3</lucene-uber.version>
-        <lucene-highlighter.version>8.9.0-r2</lucene-highlighter.version>
-        <lucene-memory.version>8.9.0-r2</lucene-memory.version>
-        <lucene-queryparser.version>8.9.0-r2</lucene-queryparser.version>
-        <lucene-sandbox.version>8.9.0-r2</lucene-sandbox.version>
+        <lucene-core.version>9.7.0</lucene-core.version>
+        <lucene-queryparser.version>9.7.0</lucene-queryparser.version>
+        <lucene-queries.version>9.7.0</lucene-queries.version>
+        <lucene-highlighter.version>9.7.0</lucene-highlighter.version>
         <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
         <record-builder-core.version>34</record-builder-core.version>
         <roaringbitmap.version>0.9.31-r3</roaringbitmap.version>
@@ -274,12 +272,6 @@
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>eclipse-collections-api</artifactId>
                 <version>${eclipse-collections-api.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>${tinkar-jpms-deps.groupId}</groupId>
-                <artifactId>lucene-uber</artifactId>
-                <version>${lucene-uber.version}</version>
             </dependency>
 
             <dependency>
