--- a/provider/data-mvstore-provider/pom.xml
+++ b/provider/data-mvstore-provider/pom.xml
@@ -71,6 +71,18 @@
 
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>dev.ikm.tinkar.provider.mvstore</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
