--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>dev.ikm.tinkar</groupId>
     <artifactId>tinkar-core</artifactId>
-    <version>1.12.0-SNAPSHOT</version>
+    <version>1.12.1073-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>IKM tinkar core</name>
@@ -68,12 +68,13 @@
         <activej-common.version>4.3-r2</activej-common.version>
         <auto-service.version>1.0.1</auto-service.version>
         <jpms-auto-service.version>1.0.1-r3</jpms-auto-service.version>
+        <jpms-record-builder-core.version>36-r3</jpms-record-builder-core.version>
         <activej.version>4.3-r3</activej.version>
         <activej-launchers.version>4.3.1</activej-launchers.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <caffeine.version>3.1.1-r3</caffeine.version>
-        <eclipse-collections.version>11.1.0-r3</eclipse-collections.version>
-        <eclipse-collections-api.version>11.1.0-r4</eclipse-collections-api.version>
+        <eclipse-collections.version>11.1.0-r7</eclipse-collections.version>
+        <eclipse-collections-api.version>11.1.0-r7</eclipse-collections-api.version>
         <jackson.version>2.14.2</jackson.version>
         <jetty-slf4j-impl.version>11.0.7</jetty-slf4j-impl.version>
         <jgrapht.version>1.5.0</jgrapht.version>
@@ -87,7 +88,6 @@
         <lucene-queries.version>9.7.0</lucene-queries.version>
         <lucene-highlighter.version>9.7.0</lucene-highlighter.version>
         <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
-        <record-builder-core.version>34</record-builder-core.version>
         <roaringbitmap.version>0.9.31-r3</roaringbitmap.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>2.0.0-alpha6</slf4j.version>
