Feature/ikm 000 owl utilities

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <module>coordinate</module>
         <module>entity</module>
         <module>dto</module>
+        <module>language-extensions</module>
         <module>terms</module>
         <module>provider</module>
         <module>integration</module>
